Деплой на firebase

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,6 +8,9 @@
   "Menu_Planning": "Planning",
   "Menu_NewRecord": "New Record",
   "Menu_Categories": "Categories",
+  "Detail": "Detail",
+  "Register": "Registration",
+  "Login": "Login",
   "Category": "Category",
   "CategoryNotFound": "Category not found",
   "LogOut": "Logout",
