--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -8,6 +8,9 @@
   "Menu_Planning": "Планирование",
   "Menu_NewRecord": "Новая запись",
   "Menu_Categories": "Категории",
+  "Detail": "Детальная страница",
+  "Register": "Регистрация",
+  "Login": "Авторизация",
   "Category": "Категории",
   "CategoryNotFound": "Категорий пока нет",
   "LogOut": "Выйти",
